syntax = "proto3";

package ticket_base;

option go_package = "campus_acticity_ticketing_system/ticket_base/internal/proto";

message ItemType {
    int64 id = 1;
    string name = 2;
    int64 created_time = 3;
    int64 updated_time = 4;
    bool status = 5;
}

service ItemTypeService {
    rpc Create(ItemType) returns (ItemType) {}
    rpc Update(ItemType) returns (ItemType) {}
    rpc Delete(IdRequest) returns (EmptyResponse) {}
    rpc GetById(IdRequest) returns (ItemType) {}
    rpc List(ListRequest) returns (ItemTypeListResponse) {}
}

message IdRequest {
    int64 id = 1;
}

message EmptyResponse {}

message ListRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ItemTypeListResponse {
    repeated ItemType items = 1;
    int32 total = 2;
}